--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1>test</h1>
-  <a href="/EJERCICIO 0-U12.html" target="_blank">e1</a>
+  <a href="EJERCICIO 0-U12.html" target="_blank">e1</a>
 </body>
 </html>
