--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1>test</h1>
 <ul>
   <li>
-    <a href="EJERCICIO_0-U12.html">demo</a>
+    <a href="EJERCICIO_0-U12.html"><b>demo</b></a>
   </li>
 </ul>
 </body>
