--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <ul>
   <li>
     <a href="EJERCICIO_0-U12.html"><b>EJERCICIO 01U1</b></a>
-    <a href="EJERCICIO_01-U04.html"><b>demo</b></a>
+    <a href="EJERCICIO_01-U04.html"><b>EJERCICIO 01U1</b></a>
   </li>
 </ul>
 </body>
