--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1>Impervinculos</h1>
 <ul>
   <li>
-    <a href="EJERCICIO_0-U04.html"><b>EJERCICIO 01U2</b></a>
+    <a href="EJERCICIO_0_U04.html"><b>EJERCICIO 01U2</b></a>
   </li>
 </ul>
 </body>
